--- a/app/src/main/res/layout/activity_user_pass.xml
+++ b/app/src/main/res/layout/activity_user_pass.xml
@@ -97,6 +97,13 @@
                         android:textColorHint="@color/black" />
                 </LinearLayout>
 
+                <TextView
+                    android:id="@+id/tvForgotPin"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:layout_marginTop="@dimen/margin_15"
+                    android:text="@string/pin_change_text"/>
             </LinearLayout>
 
 
@@ -109,8 +116,8 @@
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:layout_marginTop="@dimen/margin_15"
-
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:visibility="visible">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -236,7 +243,13 @@
                         android:padding="@dimen/font_16"
                         android:textColorHint="@color/black" />
                 </LinearLayout>
-
+                <TextView
+                    android:id="@+id/tvPinEnter"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:layout_marginTop="@dimen/margin_15"
+                    android:text="@string/pin_enter_text"/>
                 <Button
                     android:id="@+id/tvSetUserPin"
                     android:layout_width="wrap_content"
