--- a/app/src/main/res/layout/activity_user_complete_profile.xml
+++ b/app/src/main/res/layout/activity_user_complete_profile.xml
@@ -96,7 +96,7 @@
                     android:paddingBottom="@dimen/margin_5"
                     android:text="Email Address"
                     android:textColor="@color/text_color"
-                    android:textSize="@dimen/font_16" />
+                    android:textSize="@dimen/font_15" />
 
                 <EditText
                     android:id="@+id/editEmailAddress"
@@ -104,7 +104,9 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/edit_box_background"
                     android:enabled="false"
-                    android:padding="@dimen/margin_5" />
+                    android:padding="@dimen/margin_5"
+                    android:singleLine="true"
+                    android:textSize="@dimen/font_14" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -126,14 +128,16 @@
                             android:paddingBottom="@dimen/margin_5"
                             android:text="First Name"
                             android:textColor="@color/text_color"
-                            android:textSize="@dimen/font_16" />
+                            android:textSize="@dimen/font_15" />
 
                         <EditText
                             android:id="@+id/editFirstName"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@drawable/edit_box_background"
-                            android:padding="@dimen/margin_5" />
+                            android:padding="@dimen/margin_5"
+                            android:singleLine="true"
+                            android:textSize="@dimen/font_14" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -150,14 +154,16 @@
                             android:paddingBottom="@dimen/margin_5"
                             android:text="Last Name"
                             android:textColor="@color/text_color"
-                            android:textSize="@dimen/font_16" />
+                            android:textSize="@dimen/font_15" />
 
                         <EditText
                             android:id="@+id/editLastName"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@drawable/edit_box_background"
-                            android:padding="@dimen/margin_5" />
+                            android:padding="@dimen/margin_5"
+                            android:singleLine="true"
+                            android:textSize="@dimen/font_14" />
                     </LinearLayout>
 
                 </LinearLayout>
@@ -170,7 +176,7 @@
                     android:paddingBottom="@dimen/margin_5"
                     android:text="Mobile number"
                     android:textColor="@color/text_color"
-                    android:textSize="@dimen/font_16" />
+                    android:textSize="@dimen/font_15" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -184,7 +190,9 @@
                         android:layout_weight="2"
                         android:background="@drawable/edit_box_background"
                         android:inputType="number"
-                        android:padding="@dimen/margin_5" />
+                        android:padding="@dimen/margin_5"
+                        android:singleLine="true"
+                        android:textSize="@dimen/font_14" />
 
                     <Switch
                         android:id="@+id/switchPhonePolicy"
@@ -193,6 +201,9 @@
                         android:layout_gravity="center_vertical"
                         android:layout_marginLeft="@dimen/margin_5"
                         android:layout_weight="1"
+                        android:checked="false"
+                        android:paddingLeft="@dimen/margin_10"
+                        android:text="Private"
                         android:textColor="@color/text_color" />
                 </LinearLayout>
 
@@ -203,7 +214,7 @@
                     android:paddingBottom="@dimen/margin_5"
                     android:text="Register as a"
                     android:textColor="@color/text_color"
-                    android:textSize="@dimen/font_16" />
+                    android:textSize="@dimen/font_15" />
 
                 <RadioGroup
                     android:id="@+id/radioGroupUserCommunity"
@@ -235,6 +246,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:orientation="horizontal">
+
                     <EditText
                         android:id="@+id/editCommunityName"
                         android:layout_width="0dp"
@@ -243,27 +255,33 @@
                         android:layout_weight="2"
                         android:background="@drawable/edit_box_background"
                         android:hint="Name for Community"
-                        android:padding="@dimen/margin_5"/>
+                        android:padding="@dimen/margin_5"
+                        android:singleLine="true"
+                        android:textSize="@dimen/font_14" />
+
                     <Button
                         android:id="@+id/btnAddCommunity"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="ADD" />
+                        android:background="?android:attr/selectableItemBackground"
+                        android:text="ADD"
+                        android:textColor="@color/green"
+                        android:textSize="@dimen/font_14"
+                        android:textStyle="bold" />
                 </LinearLayout>
 
-
-                    <Button
-                        android:id="@+id/btnCommunityList"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="right"
-                        android:layout_marginTop="8dp"
-                        android:padding="@dimen/margin_5"
-                        android:paddingBottom="@dimen/margin_8"
-                        android:paddingTop="@dimen/margin_8"
-                        android:text="Select Community"
-                        android:visibility="gone" />
+                <Button
+                    android:id="@+id/btnCommunityList"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:layout_marginTop="8dp"
+                    android:padding="@dimen/margin_5"
+                    android:paddingBottom="@dimen/margin_8"
+                    android:paddingTop="@dimen/margin_8"
+                    android:text="Select Community"
+                    android:visibility="gone" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -272,7 +290,7 @@
                     android:paddingBottom="@dimen/margin_5"
                     android:text="Gender"
                     android:textColor="@color/text_color"
-                    android:textSize="@dimen/font_16" />
+                    android:textSize="@dimen/font_15" />
 
                 <RadioGroup
                     android:id="@+id/radioGroupUserGender"
@@ -305,7 +323,7 @@
                     android:paddingBottom="@dimen/margin_5"
                     android:text="Privacy"
                     android:textColor="@color/text_color"
-                    android:textSize="@dimen/font_16" />
+                    android:textSize="@dimen/font_15" />
 
                 <RadioGroup
                     android:id="@+id/radioGroupUserPrivacy"
@@ -346,14 +364,16 @@
                     android:paddingBottom="@dimen/margin_5"
                     android:text="Address"
                     android:textColor="@color/text_color"
-                    android:textSize="@dimen/font_16" />
+                    android:textSize="@dimen/font_15" />
 
                 <EditText
                     android:id="@+id/editUserAddress"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/edit_box_background"
-                    android:padding="@dimen/margin_5" />
+                    android:padding="@dimen/margin_5"
+                    android:singleLine="true"
+                    android:textSize="@dimen/font_14" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -375,14 +395,16 @@
                             android:paddingBottom="@dimen/margin_5"
                             android:text="Landmark"
                             android:textColor="@color/text_color"
-                            android:textSize="@dimen/font_16" />
+                            android:textSize="@dimen/font_15" />
 
                         <EditText
                             android:id="@+id/editUserLandmark"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@drawable/edit_box_background"
-                            android:padding="@dimen/margin_5" />
+                            android:padding="@dimen/margin_5"
+                            android:singleLine="true"
+                            android:textSize="@dimen/font_14" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -399,14 +421,16 @@
                             android:paddingBottom="@dimen/margin_5"
                             android:text="City"
                             android:textColor="@color/text_color"
-                            android:textSize="@dimen/font_16" />
+                            android:textSize="@dimen/font_15" />
 
                         <EditText
                             android:id="@+id/editUserCity"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@drawable/edit_box_background"
-                            android:padding="@dimen/margin_5" />
+                            android:padding="@dimen/margin_5"
+                            android:singleLine="true"
+                            android:textSize="@dimen/font_14" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -423,14 +447,16 @@
                             android:paddingBottom="@dimen/margin_5"
                             android:text="Zip code"
                             android:textColor="@color/text_color"
-                            android:textSize="@dimen/font_16" />
+                            android:textSize="@dimen/font_15" />
 
                         <EditText
                             android:id="@+id/editUserZipcode"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@drawable/edit_box_background"
-                            android:padding="@dimen/margin_5" />
+                            android:padding="@dimen/margin_5"
+                            android:singleLine="true"
+                            android:textSize="@dimen/font_14" />
                     </LinearLayout>
                 </LinearLayout>
 
@@ -456,14 +482,16 @@
                             android:paddingBottom="@dimen/margin_5"
                             android:text="State"
                             android:textColor="@color/text_color"
-                            android:textSize="@dimen/font_16" />
+                            android:textSize="@dimen/font_15" />
 
                         <EditText
                             android:id="@+id/editUserState"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@drawable/edit_box_background"
-                            android:padding="@dimen/margin_5" />
+                            android:padding="@dimen/margin_5"
+                            android:singleLine="true"
+                            android:textSize="@dimen/font_14" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -478,14 +506,16 @@
                             android:paddingBottom="@dimen/margin_5"
                             android:text="Country"
                             android:textColor="@color/text_color"
-                            android:textSize="@dimen/font_16" />
+                            android:textSize="@dimen/font_15" />
 
                         <EditText
                             android:id="@+id/editUserCountry"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@drawable/edit_box_background"
-                            android:padding="@dimen/margin_5" />
+                            android:padding="@dimen/margin_5"
+                            android:singleLine="true"
+                            android:textSize="@dimen/font_14" />
                     </LinearLayout>
                 </LinearLayout>
 
