--- a/app/src/main/res/layout/nav_header_social_connect_base.xml
+++ b/app/src/main/res/layout/nav_header_social_connect_base.xml
@@ -16,19 +16,36 @@
         android:id="@+id/detailExpertPic"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
         app:srcCompat="@drawable/user" />
 
-    <TextView
-        android:id="@+id/tvNavUserName"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/detailExpertPic"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="8dp"
-        android:text="Welcome"
-        android:textColor="@color/white"
-        android:textSize="@dimen/font_14" />
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="@dimen/margin_10"
+        android:layout_toRightOf="@+id/detailExpertPic">
+
+        <TextView
+            android:id="@+id/tvNavUserName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Welcome"
+            android:textColor="@color/white"
+            android:textSize="@dimen/font_16" />
+
+        <TextView
+            android:id="@+id/tvNavUserCommunityName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tvNavUserName"
+            android:paddingTop="@dimen/margin_5"
+            android:text="Welcome"
+            android:textColor="@color/white"
+            android:textSize="@dimen/font_14" />
+
+    </RelativeLayout>
 
 </RelativeLayout>
