--- a/app/src/main/res/menu/activity_social_connect_base_drawer.xml
+++ b/app/src/main/res/menu/activity_social_connect_base_drawer.xml
@@ -16,7 +16,7 @@
             android:title="@string/friends_fragment" />
         <item
             android:id="@+id/nav_user_notice"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/notice"
             android:title="@string/notice_fragment" />
         <item
             android:id="@+id/nav_user_updates"
@@ -24,7 +24,7 @@
             android:title="@string/update_fragment" />
         <item
             android:id="@+id/nav_user_profile"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/work"
             android:title="@string/proflile_activity" />
 
     </group>
