--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,6 @@
     <color name="text_color">#2c2c2c</color>
     <color name="background">#dbdee3</color>
     <color name="text_color_grey">#9ea1aa</color>
+    <color name="view_color">#c2c2c2</color>
 
 </resources>
