--- a/app/src/main/res/layout/fragment_user_friends.xml
+++ b/app/src/main/res/layout/fragment_user_friends.xml
@@ -37,7 +37,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@+id/ivCreateGroup"
-                android:text="Create Group"
+                android:text="Friends"
                 android:textSize="@dimen/font_16" />
         </RelativeLayout>
 
