--- a/app/src/main/res/layout/top_view_user_suggest_profile.xml
+++ b/app/src/main/res/layout/top_view_user_suggest_profile.xml
@@ -2,90 +2,94 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    app:cardElevation="4dp"
+    app:cardBackgroundColor="#f1eff0"
+    app:cardCornerRadius="1dp"
+    app:cardElevation="2dp"
     app:cardUseCompatPadding="true">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:padding="@dimen/dp5">
+
+        <ImageView
+            android:id="@+id/ivUserProfile"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_centerVertical="true"
+            android:padding="@dimen/dp_5"
+            android:scaleType="fitXY"
+            android:src="@drawable/user" />
 
         <LinearLayout
+            android:id="@+id/layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_centerVertical="true"
+            android:layout_gravity="center_vertical"
+            android:layout_toRightOf="@+id/ivUserProfile"
+            android:orientation="vertical"
+            android:paddingLeft="@dimen/dp5"
+            android:paddingRight="@dimen/dp5">
 
-            <ImageView
-                android:id="@+id/ivUserProfile"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_margin="@dimen/dp_10"
-                android:padding="@dimen/dp_5"
-                android:scaleType="fitXY"
-                android:src="@drawable/user" />
-
-            <LinearLayout
-                android:layout_width="200dp"
+            <TextView
+                android:id="@+id/tvUserProfileName"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginRight="@dimen/dp_10"
-                android:orientation="vertical">
+                android:maxLines="1"
+                android:textColor="@color/text_color"
+                android:textSize="@dimen/font_14" />
 
-                <TextView
-                    android:id="@+id/tvUserProfileName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:maxLines="1"
-                    android:text=""
-                    android:textColor="@color/text_color"
-                    android:textSize="@dimen/font_16" />
-
-                <TextView
-                    android:id="@+id/tvUserProfileStatus"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:maxLines="1"
-                    android:text=""
-                    android:textColor="@color/text_color_grey"
-                    android:textSize="@dimen/font_12" />
-            </LinearLayout>
+            <TextView
+                android:id="@+id/tvUserProfileStatus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:paddingTop="@dimen/dp5"
+                android:textColor="@color/text_color_grey"
+                android:textSize="@dimen/font_12" />
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/linearActionViewHolder"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
             android:layout_gravity="right"
-            android:layout_marginBottom="@dimen/dp_5"
-            android:layout_marginLeft="@dimen/dp_5"
-            android:layout_marginRight="@dimen/dp_5"
-            android:layout_marginTop="@dimen/dp_10"
-            android:orientation="horizontal">
+            android:layout_toRightOf="@+id/layout"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tvAddFriend"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/tv_drawable_back"
+                android:background="#2a7bb2"
                 android:gravity="center"
+                android:padding="@dimen/dp5"
                 android:paddingLeft="@dimen/dp_15"
                 android:paddingRight="@dimen/dp_15"
-                android:text="Add"
+                android:text="ADD FRIEND"
                 android:textColor="@color/white"
-                android:textSize="@dimen/font_12" />
+                android:textSize="@dimen/font_8"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/tvRemoveFriend"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/dp_5"
-                android:background="@drawable/tv_drawable_back"
+                android:layout_marginTop="@dimen/dp5"
+                android:background="@drawable/ed_box_friends"
                 android:gravity="center"
+                android:padding="@dimen/dp5"
                 android:paddingLeft="@dimen/dp_5"
                 android:paddingRight="@dimen/dp_5"
-                android:text="Remove"
-                android:textColor="@color/white"
-                android:textSize="@dimen/font_12" />
+                android:text="REMOVE"
+                android:textColor="@color/text_color_grey"
+                android:textSize="@dimen/font_8"
+                android:textStyle="bold" />
         </LinearLayout>
-    </LinearLayout>
+    </RelativeLayout>
+
 </android.support.v7.widget.CardView>
