--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#5ba228</color>
-    <color name="colorPrimaryDark">#46811c</color>
+    <color name="colorPrimary">#4185f2</color>
+    <color name="colorPrimaryDark">#214174</color>
     <color name="colorAccent">#8e1941</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
-    <color name="green">#5ba228</color>
+    <color name="green">#4185f2</color>
     <color name="text_hint_color">#8e8e8e</color>
     <color name="text_input_color">#3c3c3c</color>
     <color name="text_color">#4d4d4d</color>
     <color name="background">#dbdee3</color>
     <color name="text_color_grey">#8f98a1</color>
     <color name="view_color">#c2c2c2</color>
+    <color name="transparent_green">#c2c2c2</color>
 
 </resources>
