--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -10,5 +10,5 @@
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:scaleType="fitXY"
-      android:src="@drawable/splash_screen"/>
+      android:src="@drawable/new5"/>
 </FrameLayout>
