--- a/app/src/main/res/layout/fragment_user_friends.xml
+++ b/app/src/main/res/layout/fragment_user_friends.xml
@@ -28,11 +28,13 @@
             android:layout_below="@+id/recyclerViewSuggestedFriendsList">
 
             <ImageView
+                android:visibility="gone"
                 android:id="@+id/ivCreateGroup"
                 android:layout_width="50dp"
                 android:layout_height="50dp" />
 
             <TextView
+                android:padding="@dimen/dp_5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
