--- a/app/src/main/res/layout/row_users_post.xml
+++ b/app/src/main/res/layout/row_users_post.xml
@@ -4,10 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardCornerRadius="2dp"
-    app:cardElevation="4dp"
-    app:cardUseCompatPadding="true">
+    android:layout_marginTop="3dp"
+    app:cardElevation="2dp"
+    app:cardUseCompatPadding="false">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
