--- a/app/src/main/res/layout/top_view_user_suggest_profile.xml
+++ b/app/src/main/res/layout/top_view_user_suggest_profile.xml
@@ -10,7 +10,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/dp5">
+        android:padding="@dimen/dp10">
 
         <ImageView
             android:id="@+id/ivUserProfile"
@@ -53,6 +53,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:layout_marginLeft="@dimen/dp10"
             android:id="@+id/linearActionViewHolder"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -79,7 +80,7 @@
                 android:id="@+id/tvRemoveFriend"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dp5"
+                android:layout_marginTop="@dimen/dp10"
                 android:background="@drawable/ed_box_friends"
                 android:gravity="center"
                 android:padding="@dimen/dp5"
