--- a/app/src/main/res/menu/activity_social_connect_base_drawer.xml
+++ b/app/src/main/res/menu/activity_social_connect_base_drawer.xml
@@ -45,7 +45,7 @@
             <item
                 android:id="@+id/nav_logout"
                 android:icon="@drawable/logout"
-                android:title="Logout" />
+                android:title="LOGOUT" />
         </item>
     </group>
 
