--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -53,4 +53,5 @@
     <dimen name="dp_8">8dp</dimen>
     <dimen name="dp14">14dp</dimen>
     <dimen name="dp3">3dp</dimen>
+    <dimen name="dp10">10dp</dimen>
 </resources>
